fix: use flex for submit buttons for better wrapping

--- a/web/src/css/custom.scss
+++ b/web/src/css/custom.scss
@@ -110,3 +110,9 @@ td.hljs-ln-code {
     order: 2;
   }
 }
+
+.paste-submit-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
